fix project listing spacing and footer on mobile

--- a/src/Components/ProjectListing/style.css
+++ b/src/Components/ProjectListing/style.css
@@ -25,8 +25,7 @@
     background-color: #3c6894;
     min-height: 15rem;
     box-shadow: -4px 4px 1px 0px rgba(255, 255, 255, 0.5);
-    margin-right: 10rem;
-    margin-left: 10rem
+
   }
   
 
@@ -47,6 +46,12 @@
     .project-link-pic {
       display: none
     }
+
+    .project-listing {
+      margin-bottom: 2rem;
+      margin-top: 2rem;
+      width: 80%;
+    }
   
     .deployed-app-link {
       border-style: groove;
@@ -57,8 +62,7 @@
     }
   
     .jumbotron {
-      margin-left: .5rem;
-      margin-right: .5rem;
+margin:0 auto;
       min-height: 26rem;
     }
   
